infra/k8s/api-deployment.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "evebook-api"
  namespace: "default"
  labels:
    app: "evebook-api"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "evebook-api"
  template:
    metadata:
      labels:
        app: "evebook-api"
    spec:
      containers:
      - name: "api"
        image: "evebook/api:0cf12255adcb6f26f77286cefde23666fb02f0a2"
        livenessProbe:
          httpGet:
            path: /status
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1

      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=eve-book:europe-west1:eve-book-main-db=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true

      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
